Changed page title to dev

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
       body { background: #b4b5b4 !important; padding-top: 30px}
       .btn, .btn:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {background-color: #fbb040; border-color: #fbb040; color: rgba(0, 0, 0, 0.5)}
     </style>
-    <title>Sensors Data</title>
+    <title>Sensors Data - dev</title>
   </head>
   <body>
     <noscript>
