Issue #29 Fixed Sensor labels positioning

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,7 +30,7 @@
       padding-top: 30px;
       font-family: 'Montserrat', sans-serif;
       }
-      .btn, .btn:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
+      .btn-primary, .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
       background-color: #367a4c;
       border-color: #71c364;
       color: #71c364;
@@ -38,7 +38,7 @@
       min-width: 45px;
       font-size: 0.6em;
       }
-      .btn:hover {background-color: #367a4c; border-color: #71c364; color: #71c364}
+      .btn-primary:hover {background-color: #367a4c; border-color: #71c364; color: #71c364}
       .text-primary {color: #ffffff}
       .navbar-light .navbar-nav .nav-link {
       color: white;
